// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interested-party-comments GET /manage-documents/:folderId/ should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/ should render manage folder page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage folder</span>
            <h1 class="govuk-heading-l">Supporting documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <table class="govuk-table" id="documents-table">
                <thead class="govuk-table__head">
                    <tr class="govuk-table__row">
                        <th scope="col" class="govuk-table__header">Name</th>
                        <th scope="col" class="govuk-table__header">Date submitted</th>
                        <th scope="col" class="govuk-table__header">Redaction status</th>
                        <th scope="col" class="govuk-table__header">Actions</th>
                    </tr>
                </thead>
                <tbody class="govuk-table__body">
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/15d19184-155b-4b6c-bba6-2bd2a61ca9a3/test-pdf-documentFolderInfo.pdf"
                                target="_blank">test-pdf-documentFolderInfo.pdf</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>PDF, 129 KB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">1 February 2023</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/1/15d19184-155b-4b6c-bba6-2bd2a61ca9a3"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">test-pdf-documentFolderInfo.pdf</span></a>
                        </td>
                    </tr>
                    <tr class="govuk-table__row">
                        <td class="govuk-table__cell">
                            <div class="govuk-!-margin-bottom-4"><a class="govuk-link" href="/documents/1/download/47d8f073-c837-4f07-9161-c1a5626eba56/sample-20s-documentFolderInfo.mp4"
                                target="_blank">sample-20s-documentFolderInfo.mp4</a>
                            </div>
                            <dl class="govuk-body govuk-!-font-size-16 pins-inline-definition-list"><dt>File type and size:&nbsp;</dt>
                                <dd>MP4, 11.8 MB</dd>
                            </dl>
                        </td>
                        <td class="govuk-table__cell">2 March 2024</td>
                        <td class="govuk-table__cell">No redaction required</td>
                        <td class="govuk-table__cell"><a href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/1/47d8f073-c837-4f07-9161-c1a5626eba56"
                            class="govuk-link">View and edit <span class="govuk-visually-hidden">sample-20s-documentFolderInfo.mp4</span></a>
                        </td>
                    </tr>
                </tbody>
            </table>
        </div>
    </div><a href="/appeals-service/appeal-details/2/interested-party-comments/5/add-document"
    role="button" draggable="false" class="govuk-button" data-module="govuk-button"> Add document</a>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/:documentId should render a 404 error page if the folderId is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Page not found</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">If you typed the web address, check it is correct.</p>
            <p class="govuk-body">If you pasted the web address, check you copied the entire address.</p>
            <p             class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists</p>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /manage-documents/:folderId/:documentId should render manage document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
            <div class="govuk-notification-banner govuk-!-margin-bottom-5" role="region"
            aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <p class="govuk-notification-banner__heading">Virus scan in progress</p><a class="govuk-notification-banner__link" href=""
                    data-cy="refresh-page">Refresh page to see if scan has finished</a>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Manage versions</span>
            <h1 class="govuk-heading-l">test-pdf-documentFileVersionsInfo.pdf</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Name</dt>
                    <dd class="govuk-summary-list__value">
                        <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                        </div>
                        <div class="govuk-!-margin-bottom-1"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                        </div>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-name/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf name</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Version</dt>
                    <dd class="govuk-summary-list__value">1</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Date submitted</dt>
                    <dd class="govuk-summary-list__value">1 February 2023</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf date received</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Redaction status</dt>
                    <dd class="govuk-summary-list__value">Redacted</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/5/manage-documents/change-document-details/1/1">Change<span class="govuk-visually-hidden"> test-pdf-documentFileVersionsInfo.pdf redaction status</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <h2>Document versions</h2>
            <p class="govuk-body">View and remove versions of this document</p>
            <details class="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Version history</span>
                </summary>
                <div class="govuk-details__text">
                    <table class="govuk-table">
                        <thead class="govuk-table__head">
                            <tr class="govuk-table__row">
                                <th scope="col" class="govuk-table__header">Version</th>
                                <th scope="col" class="govuk-table__header">Name</th>
                                <th scope="col" class="govuk-table__header">Activity</th>
                                <th scope="col" class="govuk-table__header">Redaction status</th>
                                <th scope="col" class="govuk-table__header">Action</th>
                            </tr>
                        </thead>
                        <tbody class="govuk-table__body">
                            <tr class="govuk-table__row">
                                <td class="govuk-table__cell">1</td>
                                <td class="govuk-table__cell">
                                    <div class="govuk-!-margin-bottom-2"><span class="govuk-body">test-pdf-documentFileVersionsInfo.pdf</span>
                                    </div><strong class="govuk-tag govuk-tag--blue single-line govuk-!-margin-bottom-2">Current version</strong>
                                    <div                                     class="govuk-!-margin-bottom-2"><strong class="govuk-tag govuk-tag--yellow">Virus scanning</strong>
                </div>
                </td>
                <td class="govuk-table__cell">
                    <p class="govuk-body"><strong>Create</strong>: 13:14, 31 October 2023,
                        <br>by John Smith</p>
                </td>
                <td class="govuk-table__cell">Redacted</td>
                <td class="govuk-table__cell"></td>
                </tr>
                </tbody>
                </table>
        </div>
        </details>
    </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /reject/check-your-answers should render check your answers page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and reject comment</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">
                <div class="pins-show-more">Awaiting review comment 47</div>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">No documents</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document/?backUrl=/interested-party-comments/3670/reject/check-your-answers">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Review decision</dt>
            <dd class="govuk-summary-list__value">Comment rejected</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/review">Change<span class="govuk-visually-hidden"> review decision</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Why are you rejecting the comment?</dt>
            <dd             class="govuk-summary-list__value">
                <div class="pins-show-more" data-label="Read more" data-mode="text"></div>
                </dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/select-reason">Change<span class="govuk-visually-hidden"> why you are rejecting the comment</span></a>
                </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you want to allow the interested party to resubmit a comment?</dt>
            <dd             class="govuk-summary-list__value">No</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/reject/allow-resubmit">Change<span class="govuk-visually-hidden"> if you want to allow the interested party to resubmit a comment</span></a>
                </dd>
        </div>
    </dl>
    <p class="govuk-body">We will send an email to the interested party to explain why you rejected
        their comment.</p>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form method="post" novalidate="novalidate">
                <button type="submit" class="govuk-button" data-module="govuk-button">Reject comment</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /reject/select-reason should render reject comment page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset" aria-describedby="rejection-reason-hint">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                            <h1 class="govuk-fieldset__heading"> Why are you rejecting the comment?</h1>
                        </legend>
                        <div id="rejection-reason-hint" class="govuk-hint">Select all that apply.</div>
                        <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason" name="rejectionReason"
                                type="checkbox" value="1">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason">Received after deadline</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-2" name="rejectionReason"
                                type="checkbox" value="2">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-2">Includes personal and/or medical information</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-3" name="rejectionReason"
                                type="checkbox" value="3">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-3">Includes inflammatory content</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-4" name="rejectionReason"
                                type="checkbox" value="4">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-4">Duplicated comment</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-5" name="rejectionReason"
                                type="checkbox" value="5">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-5">Not relevant to this appeal</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-6" name="rejectionReason"
                                type="checkbox" value="6">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-6">Contains links to web pages</label>
                            </div>
                            <div class="govuk-checkboxes__item">
                                <input class="govuk-checkboxes__input" id="rejection-reason-7" name="rejectionReason"
                                type="checkbox" value="7" data-aria-controls="conditional-rejection-reason-7">
                                <label class="govuk-label govuk-checkboxes__label" for="rejection-reason-7">Other</label>
                            </div>
                            <div class="govuk-checkboxes__conditional govuk-checkboxes__conditional--hidden"
                            id="conditional-rejection-reason-7">
                                <div class="pins-add-another" aria-live="polite" data-max-item-count="10">
                                    <div class="pins-add-another__item govuk-!-margin-top-6">
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full flex-row space-between">
                                                <label for="rejection-reason-7-1" class="govuk-label govuk-!-margin-bottom-4">Enter a reason</label>
                                                <div class="pins-add-another__remove-button-container"></div>
                                            </div>
                                        </div>
                                        <div class="govuk-grid-row">
                                            <div class="govuk-grid-column-full">
                                                <div class="govuk-form-group">
                                                    <input class="govuk-input pins-add-another__item-input govuk-!-margin-0"
                                                    id="rejection-reason-7-1" name="rejectionReason-7" type="text" value="">
                                                </div>
                                            </div>
                                        </div>
                                    </div>
                                    <button type="button" class="govuk-button pins-add-another__add-button govuk-button--secondary govuk-!-margin-top-4 govuk-!-margin-bottom-0"
                                    data-module="govuk-button">Add another</button>
                                </div>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with email not provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">Comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /review-comment with data should render review comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Review comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">test1@example.com</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <form action="" method="POST" novalidate>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">Comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Review decision</legend>
                        <div class="govuk-radios" data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Accept comment</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Reject comment</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /view-comment with data should render view comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">View comment</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                    <dd class="govuk-summary-list__value">Lee Thornton</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                    <dd class="govuk-summary-list__value">test1@example.com</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                    <dd class="govuk-summary-list__value">Not provided</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=false&amp;editAddress=false">Add<span class="govuk-visually-hidden"> address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Site visit requested</dt>
                    <dd class="govuk-summary-list__value">No</dd>
                </div>
                <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> When did the interested party submit the comment?</dt>
                    <dd                     class="govuk-summary-list__value">9 October 2024</dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                    <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact">Redact</a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                    <dd class="govuk-summary-list__value">No documents</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/add-document">Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET change-document-details/:folderId/:documentId should render change document details page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo.jpeg</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="items[0][documentId]" name="items[0][documentId]"
                        type="hidden" value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset" role="group">
                            <legend class="govuk-fieldset__legend">Date received</legend>
                            <div class="govuk-date-input" id="items[0]receivedDate">
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.day">Day</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.day" name="items[0][receivedDate]-[day]" type="text"
                                        value="11" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.month">Month</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-2"
                                        id="items[0].receivedDate.month" name="items[0][receivedDate]-[month]"
                                        type="text" value="10" inputmode="numeric">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label govuk-date-input__label" for="items[0].receivedDate.year">Year</label>
                                        <input class="govuk-input govuk-date-input__input govuk-input govuk-date-input__input govuk-input--width-4"
                                        id="items[0].receivedDate.year" name="items[0][receivedDate]-[year]" type="text"
                                        value="2023" inputmode="numeric">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                    <div class="govuk-form-group">
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend">Redaction status</legend>
                            <div class="govuk-radios" data-module="govuk-radios">
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]" name="items[0][redactionStatus]"
                                    type="radio" value="redacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]">Redacted</label>
                                </div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-2" name="items[0][redactionStatus]"
                                    type="radio" value="unredacted">
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-2">Unredacted</label>
                                </div>
                                <div class="govuk-radios__divider">Or</div>
                                <div class="govuk-radios__item">
                                    <input class="govuk-radios__input" id="items[0][redactionStatus]-4" name="items[0][redactionStatus]"
                                    type="radio" value="no redaction required" checked>
                                    <label class="govuk-label govuk-radios__label" for="items[0][redactionStatus]-4">No redaction required</label>
                                </div>
                            </div>
                        </fieldset>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET change-document-name/:folderId/:documentId should render change document page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Change document details</span>
            <h1 class="govuk-heading-l">Appellant costs application documents</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <form method="post" novalidate="novalidate">
                <div class="govuk-form-group">
                    <h2 class="govuk-heading-m">ph0-documentFileInfo</h2>
                    <div class="govuk-form-group">
                        <input class="govuk-input" id="documentId" name="documentId" type="hidden"
                        value="d51f408c-7c6f-4f49-bcc0-abbb5bea3be6">
                    </div>
                    <div class="govuk-form-group">
                        <label class="govuk-label govuk-caption-m govuk-!-margin-bottom-3" for="file-name">File name</label>
                        <input class="govuk-input" id="file-name" name="fileName"
                        type="text" value="ph0-documentFileInfo">
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;
